--- a/Desktop/gouvernance-des-donnees/src/main/resources/application.properties
+++ b/Desktop/gouvernance-des-donnees/src/main/resources/application.properties
@@ -15,5 +15,7 @@ eureka.client.enabled=false
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.data.mongodb.uri=mongodb://localhost:27017/columndb
+spring.servlet.multipart.enabled=true
 
+spring.servlet.multipart.max-request-size=10MB
 #spring.data.mongodb.auto-index-creation=true
