--- a/Desktop/gouvernance-des-donnees/src/main/resources/application.properties
+++ b/Desktop/gouvernance-des-donnees/src/main/resources/application.properties
@@ -17,5 +17,6 @@ eureka.client.enabled=false
 spring.data.mongodb.uri=mongodb://localhost:27017/columndb
 spring.servlet.multipart.enabled=true
 
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 #spring.data.mongodb.auto-index-creation=true
