--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,13 @@
-spring.application.name=mscolumn
+spring.application.name=champs-service
 server.port= 8081
 spring.cloud.config.enabled=false
-eureka.client.enabled=false
-#eureka.client.server-url.default-zone=http://localhost:8761/eureka-service
-#eureka.client.register-with-eureka=false
-#spring.jpa.hibernate.dd1-auto-create-drop
+eureka.client.enabled=true
+eureka.client.server-url.defaultZone=http://localhost:8761/eureka-service
+eureka.client.register-with-eureka=true
+spring.data.mongodb.uri=mongodb://localhost:27017/columnd
+management.endpoint.health.show-details=always
+eureka.client.fetch-registry=true
+eureka.instance.hostname=localhost
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
-#http://localhost:8081/h2
-#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.data.mongodb.uri=mongodb://localhost:27017/columndb
 #spring.data.mongodb.auto-index-creation=true
