project connected to eureka server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.cloud.config.enabled=false
 eureka.client.enabled=true
 eureka.client.server-url.defaultZone=http://localhost:8761/eureka-service
 eureka.client.register-with-eureka=true
-spring.data.mongodb.uri=mongodb://localhost:27017/columnd
+spring.data.mongodb.uri=mongodb://localhost:27017/columndb
 management.endpoint.health.show-details=always
 eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
