--- a/Desktop/gouvernance-des-donnees/src/main/resources/application.properties
+++ b/Desktop/gouvernance-des-donnees/src/main/resources/application.properties
@@ -2,6 +2,14 @@ spring.application.name=mscolumn
 server.port= 8083
 spring.cloud.config.enabled=false
 eureka.client.enabled=false
+spring.data.mongodb.uri=mongodb://localhost:27017/columndb
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+##spring.main.allow-bean-definition-overriding=true
+#logging.level.org.springframework=DEBUG
+#DB_CLOSE_ON_EXIT = FALSE
+#spring.data.mongodb.auto-index-creation=true
 #eureka.client.server-url.default-zone=http://localhost:8761/eureka-service
 #eureka.client.register-with-eureka=false
 #spring.jpa.hibernate.dd1-auto-create-drop
@@ -13,10 +21,3 @@ eureka.client.enabled=false
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.data.mongodb.uri=mongodb://localhost:27017/columndb
-spring.servlet.multipart.enabled=true
-
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
-#spring.data.mongodb.auto-index-creation=true
