--- a/Desktop/Automatisation/BackEnd/gouvernance-des-donnees/pom.xml
+++ b/Desktop/Automatisation/BackEnd/gouvernance-des-donnees/pom.xml
@@ -73,14 +73,14 @@
             <artifactId>isoparser</artifactId>
             <version>1.9.56</version>
         </dependency>
-        <dependency>
+      <!--  <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <dependency>
+        </dependency>-->
+      <!--  <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-        </dependency>
+        </dependency>-->
 
 
 
