--- a/Desktop/Automatisation/BackEnd/gouvernance-des-donnees/src/main/resources/application.properties
+++ b/Desktop/Automatisation/BackEnd/gouvernance-des-donnees/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=mscolumn
 server.port= 8083
 spring.cloud.config.enabled=false
-eureka.client.enabled=true
+#eureka.client.enabled=true
 spring.data.mongodb.uri=mongodb://localhost:27017/columndb
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
-spring.cloud.config.uri=http://172.16.3.140:8761
-eureka.client.server-url.default-zone=${vcap.services.eureka-service.credentials.uri:http://172.16.3.140:8761
-eureka.client.register-with-eureka=true
-eureka.instance.hostname=eureka-service
+#spring.cloud.config.uri=http://172.16.3.140:8761
+#eureka.client.server-url.default-zone=${vcap.services.eureka-service.credentials.uri:http://172.16.3.140:8761
+#eureka.client.register-with-eureka=true
+#eureka.instance.hostname=eureka-service
 #spring.jpa.hibernate.dd1-auto-create-drop
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
